data/forge_javadoc/1.9.4/raw/net/minecraft/entity/monster/EntitySnowman.md
---
title: "EntitySnowman"
description: "public class EntitySnowman extends EntityGolem implements IRangedAttackMob"
package: "net/minecraft/entity/monster"
version: "1.9.4"
forgeBuild: "12.17.0.2051"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.9.4-12.17.0.2051/net/minecraft/entity/monster/EntitySnowman.html"
sourceType: javadoc
---

# EntitySnowman

**Inheritance:** java.lang.Object → net.minecraft.entity.Entity → net.minecraft.entity.EntityLivingBase → net.minecraft.entity.EntityLiving → net.minecraft.entity.EntityCreature → net.minecraft.entity.monster.EntityGolem → net.minecraft.entity.monster.EntitySnowman

## Class signature

```java
public class EntitySnowman extends EntityGolem implements IRangedAttackMob
```

## Methods

- `protected void applyEntityAttributes()`
- `void attackEntityWithRangedAttack(EntityLivingBase target, float p_82196_2_)`
- `protected void entityInit()`
- `protected SoundEvent getAmbientSound()`
- `protected SoundEvent getDeathSound()`
- `float getEyeHeight()`
- `protected SoundEvent getHurtSound()`
- `protected ResourceLocation getLootTable()`
- `protected void initEntityAI()`
- `boolean isPumpkinEquipped()`
- `void onLivingUpdate()`
- `protected boolean processInteract(EntityPlayer player, EnumHand hand, ItemStack stack)`
- `void setPumpkinEquipped(boolean pumpkinEquipped)`

## Fields

- `EntitySnowman`
